--- a/configure.ac
+++ b/configure.ac
@@ -13,14 +13,14 @@
 # The real GNU Autoconf configuration script is in "configure.ds",
 # which is loaded in this file. A set of macros is also loaded
 # from "${ds_top_srcdir}/infrastructure/acmacros.m4".
-AC_INIT([ucl],[0.9b0])
+AC_INIT([ucl],[0.9b1])
 AC_PREREQ(2.60)
 
 AC_SUBST([PACKAGE_VERSION],[0.9.0])
 AC_DEFINE([PACKAGE_VERSION],["0.9.0"],[full package version])
 
-AC_SUBST([PACKAGE_XVERSION],[0.9b0])
-AC_DEFINE([PACKAGE_XVERSION],["0.9b0"],[full extended package version])
+AC_SUBST([PACKAGE_XVERSION],[0.9b1])
+AC_DEFINE([PACKAGE_XVERSION],["0.9b1"],[full extended package version])
 
 AC_SUBST([PACKAGE_VERSION_MAJOR],[0])
 AC_DEFINE([PACKAGE_VERSION_MAJOR],["0"],[package version major number])
@@ -28,8 +28,8 @@ AC_DEFINE([PACKAGE_VERSION_MAJOR],["0"],[package version major number])
 AC_SUBST([PACKAGE_VERSION_MINOR],[9])
 AC_DEFINE([PACKAGE_VERSION_MINOR],["9"],[package version minor number])
 
-AC_SUBST([PACKAGE_VERSION_PATCH],[0])
-AC_DEFINE([PACKAGE_VERSION_PATCH],["0"],[package version patch number])
+AC_SUBST([PACKAGE_VERSION_PATCH],[1])
+AC_DEFINE([PACKAGE_VERSION_PATCH],["1"],[package version patch number])
 
 AC_SUBST([PACKAGE_VERSION_MAJOR_MINOR],[0.9])
 AC_DEFINE([PACKAGE_VERSION_MAJOR_MINOR],["0.9"],[package version major.minor])
@@ -41,7 +41,7 @@ m4_include([infrastructure/acmacros.m4])
 
 AC_CONFIG_FILES([meta.d/ucl-config:meta/ucl-config.in])
 AC_CONFIG_FILES([meta.d/postinstall:meta/postinstall.in])
-AC_CONFIG_FILES([meta.d/ucl.pc:meta/.in])
+AC_CONFIG_FILES([meta.d/ucl.pc:meta/ucl.pc.in])
 AC_CONFIG_FILES([meta.d/slackware/bin/doinst.sh:meta/slackware/bin/doinst.sh.in])
 AC_CONFIG_FILES([meta.d/slackware/bin/slack-desc:meta/slackware/bin/slack-desc.in])
 AC_CONFIG_FILES([meta.d/slackware/doc/slack-desc:meta/slackware/doc/slack-desc.in])
