reviewing the btree interface and documentation

--- a/configuration/Makefile.variables.in
+++ b/configuration/Makefile.variables.in
@@ -1,5 +1,6 @@
 
 
+ucl_UPPERCASE_LIBRARY_PREFIX     = UCL
 ucl_INTERFACE_MAJOR_VERSION      = @ucl_INTERFACE_MAJOR_VERSION@
 ucl_INTERFACE_MINOR_VERSION      = @ucl_INTERFACE_MINOR_VERSION@
 ucl_INTERFACE_VERSION            = @ucl_INTERFACE_VERSION@
