started updating infrastructure

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,30 +1,37 @@
-## Makefile.in --
-#
 # @configure_input@
+#
+# Part of: Useless Containers Library
+# Contents: main Makefile
+# Date: Tue Feb  3, 2009
+#
+# Abstract
+#
+#
+#
+# Copyright (c) 2009, 2010 Marco Maggi <marcomaggi@gna.org>
+#
+# This program is  free software: you can redistribute  it and/or modify
+# it under the  terms of the GNU General Public  License as published by
+# the Free Software Foundation, either  version 3 of the License, or (at
+# your option) any later version.
+#
+# This program  is distributed in the  hope that it will  be useful, but
+# WITHOUT   ANY  WARRANTY;   without  even   the  implied   warranty  of
+# MERCHANTABILITY  or FITNESS  FOR A  PARTICULAR PURPOSE.   See  the GNU
+# General Public License for more details.
+#
+# You  should have received  a copy  of the  GNU General  Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+#
 
-ds_config_ABI		= slackware
-ds_config_DEV_ENABLED	= yes
+builddir	= @builddir@
+srcdir		= @srcdir@
 
-include Makefile.library
-include Makefile.variables
-$(eval $(call ds-package-variables))
-$(eval $(call ds-common-programs))
-$(eval $(call ds-main-rules))
-$(eval $(call ds-tests))
-$(eval $(call ds-generic-documentation))
+include meta.d/makefiles/develstuff.make
+$(eval $(call ds-full-head))
 $(eval $(call ds-c-language))
-include Makefile.ds
-$(eval $(call ds-texinfo-documentation))
-$(eval $(call ds-uninstall-scripts))
-$(eval $(call ds-meta-scripts))
-$(eval $(call ds-pkg-config))
-$(eval $(call ds-autoconf))
-$(eval $(call ds-config-inspection-script))
-$(eval $(call ds-source-distribution))
-$(eval $(call ds-binary-distribution))
-$(eval $(call ds-slackware-distribution))
-$(eval $(call ds-end))
-
+include meta.d/makefiles/project.make
+$(eval $(call ds-full-tail))
 
 ### end of file
 # Local Variables:
